--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^3.0.1",
+    "react-toastify": "^9.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
