--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
