--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-lottie": "^1.2.3",
     "react-messenger-customer-chat": "^0.8.0",
+    "react-multi-carousel": "^2.8.2",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^3.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
