--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "antd": "^4.22.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-countup": "^6.3.0",
     "react-datepicker": "^4.8.0",
+    "react-day-picker": "^8.0.7",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.33.1",
