--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-lottie": "^1.2.3",
     "react-messenger-customer-chat": "^0.8.0",
     "react-owl-carousel": "^2.3.3",
+    "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^2.0.0",
