--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-owl-carousel": "^2.3.3",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^2.0.5",
