--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-simple-typewriter": "^2.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
+    "react-typed": "^1.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
