--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@material-ui/pickers": "^3.3.10",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@syncfusion/ej2-react-calendars": "^20.2.40",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
