--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
     "@material-ui/pickers": "^3.3.10",
+    "@react-google-maps/api": "^2.12.2",
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
     "@syncfusion/ej2-react-calendars": "^20.2.40",
