--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^2.0.5",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.0.7",
     "react-typed": "^1.2.0",
     "slick-carousel": "^1.8.1",
